syntax = "proto3";

package appointment;

service AppointmentService {
  rpc CreateAppointment (CreateAppointmentRequest) returns (AppointmentResponse);
  rpc GetAppointmentsByPatient (UserIdRequest) returns (AppointmentListResponse);
}

message CreateAppointmentRequest {
  string doctorId = 1;
  string patientId = 2;
  string timeSlot = 3; 
}

message AppointmentResponse {
  string appointmentId = 1;
  string status = 2;
}

message UserIdRequest {
  string userId = 1;
}

message AppointmentListResponse {
  repeated AppointmentResponse appointments = 1;
}
